Closed
Bug 1220061
Opened 9 years ago
Closed 9 years ago
[B2GDroid]Browser's UA can't be correctly identified by youtube.
Categories
(B2GDroid Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: xiongfuchao, Assigned: fabrice)
References
Details
Attachments
(3 files)
[1.Description]:
[B2GDroid]Browser's UA can't be correctly identified by youtube, so browser opened youtube's abbreviated page, user can't play video via browser.
Found time:17:46
See attachment:AriesKK.3gp & logcat_1746.txt
[2.Testing Steps]:
Prerequisite:turn on wifi.
1. Launch browser.
2. Go to "www.youtube.com".
3. Observe the page and try to play a video.
[3.Expected Result]:
3. Browser should load youtube's HTML5 page and user can play video via browser.
[4.Actual Result]:
3. Browser loaded youtube's abbreviated page and user can't play video via browser.
[5.Reproduction build]:
Gecko: 44.0a1
Android version:
4.4.4(Build Number 23.0.A.2.93)
[7.TCID]:
6073
[8.Note]:
this function works normal on latest firefox os build of flame v2.5 & aries v2.5
Reporter | ||
Comment 1•9 years ago
|
||
Reporter | ||
Updated•9 years ago
|
status-b2g-v2.5:
--- → unaffected
Product: Firefox OS → B2GDroid
Assignee | ||
Comment 2•9 years ago
|
||
On b2gdroid, we want to get the same UA string as Firefox OS, but we run with the android widgetry. That means that even with MOZ_UA_OS_AGNOSTIC set, we were adding the platform version to the platform token, which is just wrong, and the cause of youtube confusion. We keep setting mCompatDevice as before.
Assignee: nobody → fabrice
status-b2g-v2.5:
unaffected → ---
Attachment #8681577 -
Flags: review?(gerv)
Comment 3•9 years ago
|
||
Comment on attachment 8681577 [details] [diff] [review]
b2gdroid-ua.patch
Review of attachment 8681577 [details] [diff] [review]:
-----------------------------------------------------------------
Isn't this going to try and stick an Android version string into the UA of _every_ OS except Firefox OS?
Gerv
Assignee | ||
Comment 4•9 years ago
|
||
No, because we're already in a #ifdef ANDROID + #ifdef MOZ_WIDGET_ANDROID block (ie, a gecko build running on "real" android, not gonk).
Updated•9 years ago
|
Attachment #8681577 -
Flags: review?(gerv) → review+
Comment 6•9 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Comment 7•9 years ago
|
||
bugherder uplift |
status-b2g-v2.5:
--- → fixed
Comment 8•9 years ago
|
||
removing the b2g 2.5 flag since this commit has been reverted due to an incorrect merge, sorry for the confusion
You need to log in
before you can comment on or make changes to this bug.
Description
•