Bug 1220061 - Android UA is not correct when MOZ_UA_OS_AGNOSTIC is set r=gerv